Melhorias no Projeto e no Compose

--- a/Projeto-Compose/docker-compose.yml
+++ b/Projeto-Compose/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.8"
 
 services:
+
   db:
     build:
       context: ./db
@@ -8,17 +9,21 @@ services:
     container_name: database-mongo
     ports:
       - "27017:27017"
+    networks:
+      - app-node-net
+
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
     container_name: backend
-    volumes:
-      - ./backend:/backend
     ports:
       - "3000:3000"
+    networks:
+      - app-node-net
     depends_on:
       - db
+
   frontend:
     build:
       context: ./frontend
@@ -28,9 +33,13 @@ services:
       - ./frontend:/usr/share/nginx/html
     ports:
       - "80:80"
+    networks:
+      - app-node-net
     depends_on:
       - backend
 
-
+networks:
+  app-node-net:
+    driver: bridge
 
 
