--- a/Blog/Blog-compose-v2/docker-compose.yml
+++ b/Blog/Blog-compose-v2/docker-compose.yml
@@ -1,35 +1,30 @@
 version: '3.8'
 
 services:
+
+  db:
+    image: mysql:8.0
+    container_name: mysql
+    restart: always
+    env_file:
+      - .env
+    volumes:
+      - db_data:/var/lib/mysql
+    ports:
+      - "3306:3306"
+
   wordpress:
     image: wordpress:latest
     container_name: wordpress
     restart: always
     ports:
       - "8080:80"
-    environment:
-      WORDPRESS_DB_HOST: db:3306
-      WORDPRESS_DB_USER: ${MYSQL_USER}
-      WORDPRESS_DB_PASSWORD: ${MYSQL_PASSWORD}
-      WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
+    env_file:
+      - .env
     volumes:
       - wordpress_data:/var/www/html
     depends_on:
       - db
-
-  db:
-    image: mysql:8.0
-    container_name: mysql
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-    volumes:
-      - db_data:/var/lib/mysql
-    ports:
-      - "3306:3306"
 
 volumes:
   wordpress_data:
